--- a/coupler_main.doc.html
+++ b/coupler_main.doc.html
@@ -9,16 +9,16 @@
 <A HREF="#ERRORS">ERRORS</A> / 
 <A HREF="#NOTES">NOTES</A> 
 </FONT>
-<P><I>Last updated on <!--#exec cmd="echo $LAST_MODIFIED" -->.</I>
 <BR><BR></DIV><HR>
 
 
 <H2>program coupler_main</H2>
 <A NAME="HEADER">
 <PRE>
-     Version: v2.1
-     Date:    November 30, 1999
-     Contact: Bruce Wyman
+     <B>Contact:</B>   Bruce Wyman
+     <B>Reviewers:</B>
+
+     <B><A HREF=".doc.log#coupler_main.f90">Tags/Status</A></B>
 </PRE>
 </A><!-- END HEADER -->
 <!--------------------------------------------------------------------->
@@ -203,8 +203,9 @@
 <H4>CHANGE HISTORY</H4>
 <!-- BEGIN CHANGES -->
 <PRE>
+<B><A HREF=".doc.log#coupler_main.f90">Revision history</A></B>
 
-<b>changes for v2.1</b>
+<b>changes prior to 6/1/2000</b>
 
    * Added calls to timing routines. 
    * Fixed a small bug when checking the existence of the 
